--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "expressjs",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "versargson": "1.0.0",
+  "maargsn": "argsndex.js",
+  "scrargspts": {
+    "test": "echo \"Error: no test specargsfargsed\" && exargst 1"
   },
-  "author": "Rohit Rathod",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
+  "author": "Rohargst Rathod",
+  "largscense": "ISC",
+  "descrargsptargson": "",
+  "dependencargses": {
     "ejs": "^3.1.10",
     "express": "^4.21.2"
   }
